about section improved , codeclub label added to footer, upcoming events section added to home

--- a/pages/about.html
+++ b/pages/about.html
@@ -151,38 +151,147 @@
     </div>
   </section>
 
-  <!-- Mission & Vision -->
-  <section class="w-full py-20 bg-white">
-    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-      <!-- Image -->
-      <div data-aos="fade-right">
-        <img src="../images/home/bg2.jpg" alt="Mission & Vision"
-          class="rounded-2xl shadow-lg object-cover w-full h-[400px]" />
+<!-- Mission & Vision -->
+<section class="w-full py-20 bg-gray-50">
+  <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+    <!-- Image -->
+    <div data-aos="fade-right">
+      <img src="../images/home/bg2.jpg" alt="Mission & Vision"
+        class="rounded-2xl shadow-lg object-cover w-full h-[420px]" />
+    </div>
+
+    <!-- Content -->
+    <div class="flex flex-col gap-6" data-aos="fade-left">
+      <h2 class="text-3xl md:text-4xl font-extrabold text-gray-800">
+        Our <span class="text-green-600">Mission & Vision</span>
+      </h2>
+
+      <!-- Mission -->
+      <div>
+        <h3 class="text-xl font-semibold text-green-700 mb-3">Our Mission</h3>
+        <ul class="space-y-2 text-gray-700 leading-relaxed list-disc list-inside">
+          <li>To work with grass root level groups.</li>
+          <li>To work with all communities without discrimination for the development of target group.</li>
+          <li>Working on Rights based approach and issues.</li>
+          <li>Development of linkages with similar organisations.</li>
+          <li>Networking with other organisations working for the same cause.</li>
+        </ul>
       </div>
 
-      <!-- Content -->
-      <div class="flex flex-col gap-6" data-aos="fade-left">
-        <h2 class="text-3xl md:text-4xl font-extrabold text-gray-800">
-          Our <span class="text-green-600">Mission & Vision</span>
-        </h2>
-        <p class="text-lg text-gray-600 leading-relaxed">
-          We aim to empower young voices by creating opportunities for leadership, 
-          awareness, and impactful initiatives.  
-          Our vision is a nation where youth play a central role in shaping 
-          political, social, and community growth.
+      <!-- Vision -->
+      <div>
+        <h3 class="text-xl font-semibold text-green-700 mb-3">Our Vision</h3>
+        <p class="text-gray-700 leading-relaxed">
+          Our vision is to provide <span class="font-medium">"Free of Charge"</span> humanitarian services 
+          to society's differently abled and needy members, and to cure 
+          (treatment and rehabilitation) the helpless drug addicts and patients.
         </p>
-        <ul class="space-y-3 text-gray-700">
-          <li class="flex items-center gap-2"> ✅ <span>Building leadership skills among youth</span></li>
-          <li class="flex items-center gap-2"> ✅ <span>Addressing public & political issues</span></li>
-          <li class="flex items-center gap-2"> ✅ <span>Creating positive impact through social work</span></li>
-        </ul>
-        <a href="/pages/constitution.html"
-          class="bg-green-700 text-white font-semibold px-6 py-3 rounded-full w-fit hover:bg-green-800 transition">
-          Read More
-        </a>
+      </div>
+
+      <!-- CTA -->
+      <a href="/pages/constitution.html"
+        class="mt-4 bg-green-700 text-white font-semibold px-6 py-3 rounded-full w-fit hover:bg-green-800 transition">
+        Read More
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- Certificate of Registration -->
+<section class="w-full py-20 bg-white">
+  <div class="max-w-4xl mx-auto px-6 text-center">
+    <!-- Heading -->
+    <h2 class="text-3xl md:text-4xl font-extrabold text-gray-800 mb-6">
+      Certificate of <span class="text-green-600">Registration</span>
+    </h2>
+    <p class="text-gray-600 mb-10 max-w-2xl mx-auto">
+      Our organization is officially registered and recognized.  
+      Below is our certificate of registration for transparency and credibility.
+    </p>
+
+    <!-- Certificate Image Card -->
+    <div class="bg-white shadow-2xl rounded-2xl overflow-hidden border border-gray-200 hover:shadow-green-200 transition duration-500">
+      <img src="../images/about/certificate.jpg" 
+           alt="Certificate of Registration" 
+           class="w-full object-contain max-h-[700px] mx-auto" />
+    </div>
+  </div>
+</section>
+
+<!-- Organisation Objectives -->
+<section class="w-full py-20 bg-gray-50">
+  <div class="max-w-7xl mx-auto px-6">
+    <!-- Heading -->
+    <div class="text-center mb-12">
+      <h2 class="text-3xl md:text-4xl font-extrabold text-gray-800">
+        Organisation <span class="text-green-600">Objectives</span>
+      </h2>
+      <p class="text-gray-600 mt-3 max-w-2xl mx-auto">
+        We are committed to creating lasting impact through welfare, empowerment, 
+        and social development initiatives across Pakistan.
+      </p>
+    </div>
+
+    <!-- Objectives Grid -->
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8" data-aos="fade-up">
+      <!-- Objective Item -->
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">♿ Disability Welfare</h3>
+        <p class="text-gray-600">Support and rehabilitation for people with disabilities, ensuring equal rights and development.</p>
+      </div>
+
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">⚧ Transgender Rights</h3>
+        <p class="text-gray-600">Working for dignity, inclusion, and equal opportunities for transgender communities.</p>
+      </div>
+
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">✝ Minorities Welfare</h3>
+        <p class="text-gray-600">Uplifting marginalized minorities through development, awareness, and support services.</p>
+      </div>
+
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">🚭 Drug Abuse Prevention</h3>
+        <p class="text-gray-600">Awareness programs, preventive education, and rehabilitation services for addicts.</p>
+      </div>
+
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">👩‍👩‍👦 Women, Children & Youth</h3>
+        <p class="text-gray-600">Programs to support growth, rights, and development through education and welfare.</p>
+      </div>
+
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">📚 Education & Skills</h3>
+        <p class="text-gray-600">Providing education, vocational training, water supply, and sanitation facilities.</p>
+      </div>
+
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">🚫 Ending Harmful Practices</h3>
+        <p class="text-gray-600">Eradication of child labor, women violence, and other harmful traditional practices.</p>
+      </div>
+
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">🏥 Health & Awareness</h3>
+        <p class="text-gray-600">Providing medical awareness, patient welfare, and rehabilitation for better health.</p>
+      </div>
+
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">🦠 HIV/AIDS & Social Issues</h3>
+        <p class="text-gray-600">Awareness, prevention, and services against HIV/AIDS, disasters, and social evils.</p>
+      </div>
+
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">💪 Youth Empowerment</h3>
+        <p class="text-gray-600">Building leadership, grooming political skills, and empowering youth to lead change.</p>
+      </div>
+
+      <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition">
+        <h3 class="font-semibold text-lg text-green-700 mb-2">⚖ Legislation Awareness</h3>
+        <p class="text-gray-600">Educating youth on the legislation process to strengthen democracy and participation.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Core Values -->
   <section class="w-full py-20 bg-[#FAF3DD]">
@@ -299,7 +408,8 @@
     </div>
 
   </div>
-
+   <p class="text-center text-gray-500 my-4 font-bold flex gap-2 justify-center items-center">Developed By <img src="../images/cc-logo.png" alt="logo" class="h-12 rounded-full object-cover flex items-center"> <span class="text-yellow-400">Code</span><span class="text-blue-400">Club</span> </p>
+   
   <!-- Bottom Line -->
   <div class="mt-10 border-t border-gray-200 pt-4 text-center text-sm text-gray-500">
     © 2025 <span class="text-green-600 font-semibold">Federal Youth Parliment</span>. 
