--- a/pages/executive.html
+++ b/pages/executive.html
@@ -244,7 +244,7 @@
             <img src="../images/executives/general-sect2.jpg" alt="Member"
               class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
             <h3 class="text-xl font-bold text-gray-800">Dummy Name</h3>
-            <p class="text-green-700 font-semibold mb-3">Dummy Role</p>
+            <p class="text-green-700 font-semibold mb-3">Joint Secretary</p>
             <p class="text-gray-700 text-center text-sm leading-relaxed">
               Visionary leader dedicated to empowering youth through innovation, collaboration, 
               and impactful community programs.
@@ -388,6 +388,8 @@
     </div>
 
   </div>
+
+   <p class="text-center text-gray-500 my-4 font-bold flex gap-2 justify-center items-center">Developed By <img src="../images/cc-logo.png" alt="logo" class="h-12 rounded-full object-cover flex items-center"> <span class="text-yellow-400">Code</span><span class="text-blue-400">Club</span> </p>
 
   <!-- Bottom Line -->
   <div class="mt-10 border-t border-gray-200 pt-4 text-center text-sm text-gray-500">
