--- a/pages/programs.html
+++ b/pages/programs.html
@@ -328,6 +328,8 @@
 
   </div>
 
+   <p class="text-center text-gray-500 my-4 font-bold flex gap-2 justify-center items-center">Developed By <img src="../images/cc-logo.png" alt="logo" class="h-12 rounded-full object-cover flex items-center"> <span class="text-yellow-400">Code</span><span class="text-blue-400">Club</span> </p>
+
   <!-- Bottom Line -->
   <div class="mt-10 border-t border-gray-200 pt-4 text-center text-sm text-gray-500">
     © 2025 <span class="text-green-600 font-semibold">Federal Youth Parliment</span>. 
