--- a/pages/Achievements.html
+++ b/pages/Achievements.html
@@ -15,7 +15,7 @@
     <div class="flex justify-between h-16">
       <!-- Brand -->
       <a href="/" class="flex items-center">
-        <img src="./images/logo.jpg" alt="Logo" class="h-12 w-12 rounded-full object-cover">
+        <img src="../images/logo.jpg" alt="Logo" class="h-12 w-12 rounded-full object-cover">
         <span class="ml-2 font-bold text-green-700 text-lg">Federal Youth Parliament</span>
       </a>
 
