Changed navbar error

--- a/index.html
+++ b/index.html
@@ -514,6 +514,13 @@
             alt="image">
     </div>
 </div>
+  <!-- CTA -->
+    <div class="mt-12 flex justify-center" data-aos="fade-up" data-aos-delay="200">
+      <a href="/pages/Gallery.html"
+         class="bg-green-700 text-white font-bold rounded-full px-8 py-3 hover:bg-green-800 transition">
+        View Gallery
+      </a>
+    </div>
   </section>
 <!-- ************************************** NEWS ******************************************* -->
 <section class="py-20 bg-white">
