--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery section</title>
      <script src="https://cdn.tailwindcss.com"></script>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -214,7 +215,7 @@
     <!-- Logo + Description -->
     <div class="text-center">
       <div class="flex justify-center items-center mb-4">
-        <img src="./images/logo.jpg" alt="Logo" class="w-14 h-14 mr-3 rounded-full shadow-lg border-2 border-green-600">
+        <img src="../images/logo.jpg" alt="Logo" class="w-14 h-14 mr-3 rounded-full shadow-lg border-2 border-green-600">
         <h2 class="text-2xl font-bold">
           Federal Youth <span class="text-green-600">PARLIMENT</span>
         </h2>
