--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,13 +54,14 @@
         <!-- Programs dropdown -->
         <div class="relative group">
           <button class="hover:text-green-700 hover:scale-110 hover:font-bold transition transform duration-200 flex items-center gap-1">
-            Programs
+            Events
             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M19 9l-7 7-7-7" />
             </svg>
           </button>
           <div class="absolute hidden group-hover:block bg-white shadow-lg rounded py-2 w-48">
+            <a href="/pages/programs.html" class="block px-4 py-2 hover:text-green-700 hover:scale-110 hover:font-bold transition transform duration-200">Programs</a>
             <a href="/pages/achievements.html" class="block px-4 py-2 hover:text-green-700 hover:scale-110 hover:font-bold transition transform duration-200">Achievements</a>
             <a href="/pages/gallery.html" class="block px-4 py-2 hover:text-green-700 hover:scale-110 hover:font-bold transition transform duration-200">Gallery</a>
             
@@ -110,8 +111,9 @@
 
     <!-- Programs -->
     <details class="group">
-      <summary class="cursor-pointer transition transform hover:scale-105 hover:font-bold hover:text-green-700">Programs</summary>
+      <summary class="cursor-pointer transition transform hover:scale-105 hover:font-bold hover:text-green-700">Events</summary>
       <div class="ml-4 space-y-1">
+        <a href="/pages/programs.html" class="block hover:text-green-700 hover:font-bold">Programs</a>
         <a href="/pages/achievements.html" class="block hover:text-green-700 hover:font-bold">Achievements</a>
         <a href="/pages/gallery.html" class="block hover:text-green-700 hover:font-bold">Gallery</a>
        
