--- a/pages/memberList.html
+++ b/pages/memberList.html
@@ -143,6 +143,7 @@
    <div class="flex flex-col md:flex-row items-center justify-center mb-8 gap-4">
   <!-- Input -->
   <input 
+    id="searchInput"
     type="text" 
     placeholder="Search members by CNIC" 
     class="w-full md:w-96 px-4 py-3 rounded-lg border border-gray-300 shadow-sm 
@@ -160,7 +161,7 @@
 
     <!-- Table Container -->
     <div class="overflow-x-auto shadow-xl rounded-2xl border border-gray-200 bg-white">
-      <table class="min-w-full text-sm text-gray-700">
+      <table id="memberTable" class="min-w-full text-sm text-gray-700">
         <!-- Table Head -->
         <thead class="bg-green-600 text-white">
           <tr>
